<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">Reseau Prevention 31</string>
  <string name="action_settings">Settings</string>
  <string name="permissions_accepter">Il est nécessaire d\'accepter toutes les permissions</string>
  <string name="ok">OK</string>
  <string name="oui">Oui</string>
  <string name="non">Non</string>
  <string name="annuler">Annuler</string>
  <string name="ajouter">Ajouter</string>
  <string name="debut">Début</string>
  <string name="fin">Fin</string>
  <string name="connexion">Connexion</string>
  <string name="creer_un_compte">Créer un compte</string>
  <string name="connexion_anonyme">Connexion anonyme</string>
  <string name="valider">Valider</string>
  <string name="cle_identification">Clé d\'identification</string>
  <string name="connexion_envoyer_message">Connectez\nvous</string>
  <string name="connexion_consulter_messages">Connectez\nvous</string>
  <string name="envoyer_un_message">Envoyer\nun annonce</string>
  <string name="localiser_une_brigade">Localiser une\nbrigade</string>
  <string name="consulter_les_messages">Consulter\nles annonces</string>
  <string name="conseils_protection">Conseils\nprotections\net liens utiles</string>
  <string name="texte_bandeau">Réseau Prévention 31</string>
  <string name="num_siret_incorrect">Numéro Siret incorrect</string>
  <string name="joindre_une_photo">Joindre une photo</string>
  <string name="ecrivez_votre_message">Ecrivez votre message</string>

  <!-- communication avec le serveur HTTP -->
  <string name="http_success">success</string>
  <string name="http_error">error</string>

  <string name="err_http_connect">Erreur connexion serveur HTTP</string>
  <string name="err_http_auth_requise">Authentification requise ou connexion supprimée par l\'administrateur</string>
  <string name="err_http_acces_interdit">Accès interdit</string>
  <string name="err_http_page_non_trouvee">Page non trouvée</string>
  <string name="err_http_err_serveur_interne">Erreur serveur interne</string>

  <string name="err_http_cle_inconnue">Clé d\'identification inconnue</string>


  <string name="connection_successful">Connexion réussie</string>
  <string name="connection_unsuccessful">Connexion impossible</string>
  <string name="connection_error">Erreur lors de la connexion</string>
  <string name="deconnexion">Déconnexion</string>
  <string name="deconnexion_reussie">Déconnexion réussie</string>
  <string name="accueil">Accueil</string>
  <string name="numero_siret">Numéro Siret</string>
  <string name="nom">Nom</string>
  <string name="prenom">Prénom</string>
  <string name="nomSociete">Nom de la société</string>
  <string name="erreur">Erreur</string>
  <string name="code_ape_incorrect">Code APE incorrect</string>
  <string name="code_ape_inexistant">Code APE inexistant</string>
  <string name="code_ape">Code APE</string>
  <string name="localisation">Localisation</string>
  <string name="localisation_inexistante">Localisation inexistante</string>
  <string name="localisation_imprecise">Plusieurs communes ont été trouvées</string>
  <string name="numeroTelephone">Numéro de téléphone</string>
  <string name="mail">Mail</string>
  <string name="update_database">Mise à jour de la base de données</string>
  <string name="initialisation">Initialisation</string>
  <string name="connexion_en_cours">Connexion…</string>
  <string name="update">Mise à jour</string>
  <string name="mise_a_jour_reussie">Mise à jour réussie</string>
  <string name="mise_a_jour_commencee">Mise à jour en cours…</string>
  <string name="lieu_activite_checkbox">Avez-vous plusieurs lieux d\'activités sur le département ?</string>
  <string name="renseigner_prenom">Veuillez renseigner votre prénom</string>
  <string name="renseigner_nom">Veuillez renseigner votre nom</string>
  <string name="renseigner_nom_societe">Veuillez renseigner le nom de votre société</string>
  <string name="renseigner_localisation">Veuillez renseigner la localisation</string>
  <string name="renseigner_code_ape">Veuillez renseigner le code d\'activité</string>
  <string name="renseigner_num_telephone">Veuillez renseigner votre numéro de téléphone</string>
  <string name="renseigner_mail">Veuillez renseigner votre adresse email</string>
  <string name="mail_incorrect">Format du mail incorrect</string>
  <string name="num_telephone_incorrect">Numéro de téléphone incorrect</string>
  <string name="envoi_cle">Une clé d\'identification vous sera envoyée par mail à l\'adresse %1$s dès que votre inscription sera validée par la %2$s.</string>
  <string name="accueil_anonyme">Accueil — Anonyme</string>
  <string name="nouvelles_annonces">Nouvelles annonces</string>
  <string name="anciennes_annonces">Anciennes annonces</string>
  <string name="all_messages">Tous les messages</string>
  <string name="marked_as_seen">Annonce marquée comme \"Vue\"</string>
  <string name="delete_announcement">Êtes-vous sûrs de vouloir supprimer cette annonce ?</string>
  <string name="mise_a_jour_echec">Échec de la mise à jour</string>
  <string name="err_http_informations_manquantes">Informations manquantes</string>
  <string name="err_http_err_bdd">Erreur de connexion avec la base de données</string>
  <string name="err_http_err_date">Format de date incorrect</string>
  <string name="inscription_reussie">Inscription réussie</string>
  <string name="err_http_err_register_spam">Votre inscription est déjà en cours de validation par votre chambre.</string>
</resources>
