<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activity.MainActivity">
  <?xml version="1.0" encoding="utf-8"?>

  <androidx.constraintlayout.widget.ConstraintLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/Bandeau_accueil"
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:background="@color/colorBandeau"
      app:layout_constraintTop_toTopOf="0">

    <TextView
        android:id="@+id/TitreAppli"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:text="Réseau prévention 31"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="0"
        app:layout_constraintTop_toTopOf="0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:src="@mipmap/logo"
        app:layout_constraintTop_toTopOf="0"
        app:layout_constraintLeftt_toLeftOf="0"
        tools:layout_editor_absoluteX="325dp"
        tools:layout_editor_absoluteY="0dp" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonConnexion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/connexion"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias=".4"/>

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonCreationCompte"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/creer_un_compte"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonConnexionAnonyme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/connexion_anonyme"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias=".6"/>

</androidx.constraintlayout.widget.ConstraintLayout>

